Add colors and toolbars

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Master_Class_App</string>
     <string name="title_activity_main2">Main2Activity</string>
-
+    <string name="about">Dr Deepak Goyal is pioneer of cartilage repair surgery in India and south Asia. He started working on cartilage repair and joint preservation, when joint replacement surgeries were at its peak. His continuous efforts during last 15 years has created a tremendous awareness about joint preservation amongst Indian and south Asian medical community.He is also the innovator of few of the surgical techniques like The Overlay ACI Technique for the huge osteochondral defects and The Suture Technique for midsize traumatic osteochondral lesions.\n\n\nSome of the key positions of Dr Deepak Goyal are as below…\n\n1.Founder of Indian Cartilage Society\n\n2.Past President of Indian Cartilage Society\n\n3.Founder member of Asian Cartilage Repair Society\n\n4.President of Asian Cartilage Repair Society\n\n5.Ex-board member of International Cartilage Repair Society\n\n6.Many publications in international cartilage journals on cartilage repair\n\n7.Several book chapters on cartilage repair\n\n8.Editor of an upcoming book on cartilage repair\n\n\nWe are very happy to organise the Master Class in Cartilage Repair by the pioneer himself.\nJoin us.\n\n\nEmail us for any query-  sports@knee.in\nTeam SKC</string>
 
 </resources>
